2016_may clean up